# OpenCortex

./: LICENSE  MANIFEST.in  README.md  config.yaml  configurations.json  enophone_brainflow.py  main.py  pyproject.toml  requirements.txt  setup.py  streamer.py
application/: classifier.py  lsl_stream.py  setup_dialog.py  streamer.py
application/lsl/: lsl_stream.py
data/aep/: auditory_erp_eyes_closed_S1.csv  auditory_erp_eyes_open_S1.csv
examples/: enophone_brainflow.py  gtec_speller_parser.py  plot_filtered.py  plot_psd.py  plot_raw.py  unicorn_brainflow.py
notebooks/: P300_Classification.ipynb  P300_Epoching.ipynb  cvep_mn8.ipynb
opencortex/: __main__.py  application.py  main.py
opencortex/config/: Default.yaml  ERP.yaml
opencortex/neuroengine/: base_model.py  classifier.py  opencortex_ng.py  setup_dialog.py  streamer_gui.py
opencortex/neuroengine/core/: stream_engine.py
opencortex/neuroengine/flux/: band_power.py  base.py  quality_estimator.py
opencortex/neuroengine/gui/: frequency_band_widget.py  gui_adapter.py  streamer_gui_service.py
opencortex/neuroengine/lsl/: lsl_stream.py
opencortex/neuroengine/models/: onnx_model.py  pytorch_model.py  sklearn_model.py
opencortex/neuroengine/models/classification/: majority_vote.py
opencortex/neuroengine/network/: lsl_stream.py  osc_stream.py
opencortex/neuroengine/pipes/: data_processor.py  data_writer.py
opencortex/processing/: preprocessing.py
opencortex/utils/: loader.py  net_utils.py
processing/: preprocessing.py  proc_helper.py
test/: streamer_test.py
utils/: layouts.py  loader.py  preprocessing.py  validation.py
validation/: cross_val.py  plotting.py
