[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencortex"
version = "0.1.3"
authors = [
  { name="Michele Romani", email="michele.romani.gzl0@gmail.com" },
]
description = "Software to stream EEG data, perform preprocessing, and train machine learning models for BCI applications."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.0",
    "numpy<2.0",
    "mne==1.6.1",
    "pyserial==3.5",
    "brainflow==5.12.0",
    "matplotlib==3.8.2",
    "PyQt5>=5.15.7",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.11.0",
    "pylsl==1.16.2",
    "pyqtgraph>=0.12.4",
    "seaborn==0.13.2",
    "scikit-learn==1.4.1.post1",
    "imblearn==0.0",
    "pyarrow",
    "pybluez2",
    "future==1.0.0",
    "PyYAML==6.0.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BRomans/OpenCortex"
Issues = "https://github.com/BRomans/OpenCortex/issues"
