[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencortex"
version = "0.1.5"
authors = [
  { name="Michele Romani", email="michele.romani.gzl0@gmail.com" },
]
description = "Software to stream EEG data, perform preprocessing, and train machine learning models to build real-time BCI applications."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "scripts"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/BRomans/OpenCortex"
Issues = "https://github.com/BRomans/OpenCortex/issues"
